testsuite/bsc.lib/BRAM/BRAMBE4Test.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling BRAMBE4Test.bsv
Warning: "BRAMBE4Test.bsv", line 9, column 46: (P0072)
  The definition `mkBRAM1BELoad' is deprecated. Replaced by mkBRAM1ServerBE
code generation for sysBRAMBE4Test starts
Error: "BRAMCore.bsv", line 331, column 48: (S0015)
  Bluespec evaluation-time error: Byte enables must control an 8-bit quantity.
  You should adjust the width of your data, or the number of write enables.
  During elaboration of `memory' at "BRAM.bsv", line 665, column 35.
  During elaboration of `dut0' at "BRAMBE4Test.bsv", line 9, column 38.
  During elaboration of `sysBRAMBE4Test' at "BRAMBE4Test.bsv", line 8, column
  8.
